
        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

      - DateTime now uses pytz for time zone data. This means support
        for more time zones and up to date daylight saving time
        information.

    Bugs Fixed

      - Made Five.testbrowser compatible with mechanize 0.1.7b.

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Testing.ZopeTestCase: installPackage was tied to the ZopeLite layer.

      - Launchpad #280334: Fixed problem with 'timeout'
        argument/attribute missing in testbrowser tests.

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip (RestrictedPython).

      - Lauchpad #143736,#271395: fixed AttributeError' on _ltid in TempStorage

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to
        import the same broken module.

      - Launchpad #267834: proper separation of HTTP header fields   
        using CRLF as requested by RFC 2616.

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #262313: respect the 'Expand macros when editing' flag
        when editing a page template through the ZMI

      - Launchpad #257276: fix for possible denial-of-service attack
        in PythonScript when passing an arbitrary module to the encode()
        or decode() of strings.

      - Launchpad #257269: 'raise SystemExit' with a PythonScript could shutdown
        a complete Zope instance
