@@ -27,6 +27,8 @@ from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile
 class ViewletManagerBase(origManagerBase):
     """A base class for Viewlet managers to work in Zope2"""
 
+    template = None
+    
     def __getitem__(self, name):
         """See zope.interface.common.mapping.IReadMapping"""
         # Find the viewlet
@@ -75,9 +77,10 @@ class ViewletManagerBase(origManagerBase):
         return sorted(viewlets, lambda x, y: cmp(aq_base(x[1]), aq_base(y[1])))
 
 def ViewletManager(name, interface, template=None, bases=()):
-
+    attrDict = {'__name__': name}
+    
     if template is not None:
-        template = ZopeTwoPageTemplateFile(template)
+        attrDict['template'] = ZopeTwoPageTemplateFile(template)
 
     if ViewletManagerBase not in bases:
         # Make sure that we do not get a default viewlet manager mixin, if the
@@ -87,8 +90,7 @@ def ViewletManager(name, interface, template=None, bases=()):
             bases = bases + (ViewletManagerBase,)
 
     ViewletManager = type(
-        '<ViewletManager providing %s>' % interface.getName(),
-        bases,
-        {'template': template, '__name__': name})
+        '<ViewletManager providing %s>' % interface.getName(), bases, attrDict)
+
     zope.interface.classImplements(ViewletManager, interface)
     return ViewletManager
